--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
                 <textarea id="prompt" name="prompt"></textarea>
             </div>
             <div id="download-model" class="vm-controls hidden">
-                <button type="button" data-action="download-mod">Download Model</button>
+                <button type="button" data-action="download-mod">Download Script</button>
             </div>
             <div id="reset-controls" class="vm-controls hidden">
                 <button type="button" data-action="reset-baseline">Reset Baseline Dataset</button>
